get tutors fct change tutors FCT of group by a list